# Laba2

./: .gitignore  README.md  sonar-project.properties
.github/workflows/: build.yml  test-action.yml
app/: CMakeLists.txt  common.h  dd.c  editor.c  load.c  m.c  make.bat  save.c  show.c  showwordendings.c  z.c
app/input/: test.txt  test3.txt
app/text/: create_text.c  remove_all.c
docs/: tests_desk.md
tests/: CMakeLists.txt  tests.h
